[build-system]
requires = ["setuptools>=40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logic_timer"
version = "0.1"
authors = [
  { name="Marc Betoule", email="marc.betoule@lpnhe.in2p3.fr" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLV2",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["*.py"]
exclude = []


[project.urls]
"Homepage" = "https://github.com/betoule/logic_timer"
"Bug Tracker" = "https://github.com/betoule/logic_timer/issues"

[project.scripts]
logic-timer = "logic_timer"